display the confirmation message by dynamically adding a new class to the add to cart class

--- a/javascript-amazon-project-main/styles/pages/amazon.css
+++ b/javascript-amazon-project-main/styles/pages/amazon.css
@@ -143,6 +143,9 @@
      opacity and make it visible. */
   opacity: 0;
 }
+.added-to-cart-opacity{
+  opacity: 1 !important;
+}
 
 .added-to-cart img {
   height: 20px;
